<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="8dp"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary">
            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_arrow_back"
                android:id="@+id/nav_image_button"
                android:scaleType="center"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"/>

            <ImageView
                android:id="@+id/room_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/shape_circle"
                android:layout_marginStart="8dp"/>

            <TextView
                android:text="@string/app_name"
                android:id="@+id/header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/dim_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="3"
        tools:listitem="@layout/list_message" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_photo_from_gallery"
            app:srcCompat="@drawable/ic_image"
            tools:ignore="VectorDrawableCompat" />

        <MultiAutoCompleteTextView
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_message" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/send_image_button"
            app:srcCompat="@drawable/ic_send"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>


</LinearLayout>